--- a/src/pages/HarborCafePage.css
+++ b/src/pages/HarborCafePage.css
@@ -1,6 +1,5 @@
 .harbor-mockup {
   position: relative;
-  min-height: 100vh;
 }
 
 .harbor-mockup__back {
